workload/minio/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: minio-cstor-ingress
 namespace: minio-cstor
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
  kubernetes.io/tls-acme: "true"
  kubernetes.io/ingress.class: "nginx"
spec:
 tls:
 - hosts:
   - minio-dashboard.openebs.ci
   secretName: openebs-ingress
 rules:
 - host: minio-dashboard.openebs.ci
   http:
     paths:
     - path: /
       backend:
         serviceName: minio-service
         servicePort: 9000
